--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="displayFavoriteBooks()">
     <header id="header">
         <div id="headerContent">
           <button id="home">Home</button>
